# Telegram-SpottedDMI-Bot

./: .dockerignore  .flake8  .gitignore  .pylintrc  Dockerfile  MANIFEST.in  README.md  data_functions.py  fest.yaml  function.py  functions.py  main.py  pyproject.toml  requirements.txt  requirements_dev.txt  settings.py
.devcontainer/: Dockerfile  devcontainer.json
.github/: CHANGELOG.md  PULL_REQUEST_TEMPLATE.md
.github/workflows/: dependabot-auto-merge.yml  dev.workflow.yml  docker.yml  docs.yml  lint.yml  prod.workflow.yml  publish.yml  python-app.yml  test.yml
config/: adminsid.conf.dist  adminsid.json.dist  settings.yaml.default  settings.yaml.dist  settings.yaml.types  token.conf.dist
data/: spot.db.dist  spot.sql
data/db/: meme_db_del.sql  meme_db_init.sql  post_db_del.sql  post_db_init.sql
data/markdown/: anonym_names.md  autoreply_list.md  autoreply_repost.md  autoreply_representatives.md  autoreply_subject_groups.md  help.md  instructions.md  report_cancel.md  rules.md  start.md
data/spots/: 7.json  8.json
data/yaml/: autoreplies.yaml.default  reactions.yaml.dist
docs/: .buildinfo  genindex.html  index.html  install.sh  main.html  modules.data.html  modules.debug.html  modules.handlers.html  modules.html  modules.utils.html  objects.inv  py-modindex.html  requirements.txt  search.html  searchindex.js  tests.html  use.txt
docs/_sources/: index.rst.txt  modules.data.rst.txt  modules.debug.rst.txt  modules.handlers.rst.txt  modules.rst.txt  modules.utils.rst.txt  tests.rst.txt
docs/source/: conf.py  dbschema.rst  index.rst  main.rst  modules.data.rst  modules.handlers.rst  modules.rst  modules.utils.rst  privacy.rst  readme.rst  spotted.data.rst  spotted.debug.rst  spotted.handlers.rst  spotted.rst  spotted.utils.rst  tests.rst
docs/source/_static/css/: dark.css  theme.css
docs/source/inclusions/: application_run_tip.rst
docs/source/templates/: package.rst_t
doctrees/: environment.pickle  index.doctree  main.doctree  modules.data.doctree  modules.debug.doctree  modules.doctree  modules.handlers.doctree  modules.utils.doctree
html/: .buildinfo  genindex.html  index.html  main.html  modules.data.html  modules.debug.html  modules.handlers.html  modules.html  modules.utils.html  objects.inv  py-modindex.html  search.html  searchindex.js
html/_sources/: index.rst.txt  modules.data.rst.txt  modules.debug.rst.txt  modules.handlers.rst.txt
img/: db-schema.dbdiagram.io
modules/: __init__.py
modules/data/: __init__.py  config.py  constants.py  data_reader.py  db_manager.py  meme_data.py  pending_post.py  post_data.py  published_post.py  report.py  user.py
modules/debug/: __init__.py  log_manager.py
modules/handlers/: __init__.py  anonym_comment.py  approve.py  autoreply.py  ban.py  callback_handlers.py  cancel.py  clean_pending.py  command_handlers.py  constants.py  db_backup.py  follow_comment.py  follow_spot.py  forwarded_post.py  help.py  job_handlers.py  list_banned.py  purge.py  reply.py  report_spot.py  report_user.py  rules.py  sban.py  settings.py  spot.py  start.py  stats.py
modules/utils/: __init__.py  class_util.py  conversation_util.py  info_util.py  keyboard_util.py  post_util.py
script/: init.bat  init.sh  local-ci.bat  local-ci.sh  reset-origin.bat  reset-origin.sh
src/spotted/: __init__.py  __main__.py
src/spotted/config/db/: db_test.sql  post_db_del.sql  post_db_init.sql
src/spotted/config/markdown/: anonym_names.md  help.md  no_strings.md  rules.md  spot_cancel.md  start.md  totp_setup.md
src/spotted/config/yaml/: autoreplies.yaml  settings.yaml  settings.yaml.default  settings.yaml.types
src/spotted/data/: __init__.py  config.py  data_reader.py  db_manager.py  pending_post.py  post_data.py  published_post.py  report.py  totp.py  user.py
src/spotted/debug/: __init__.py  log_manager.py
src/spotted/handlers/: __init__.py  anonym_comment.py  approve.py  autoreply.py  ban.py  cancel.py  clean_pending.py  constants.py  custom_filters.py  db_backup.py  follow_comment.py  follow_spot.py  forwarded_post.py  help.py  job_handlers.py  mute.py  purge.py  reload.py  reply.py  report_spot.py  report_user.py  rules.py  sban.py  settings.py  spam_comment.py  spot.py  start.py  unmute.py  warn.py
src/spotted/scripts/: f_crypto.py  run_sql.py
src/spotted/utils/: __init__.py  constants.py  conversation_util.py  info_util.py  keyboard_util.py  utils.py
tests/: conftest.py  db_results.yaml  test_bot.py  test_config.py  test_db.py  test_util.py  util.py  utils.py
tests/e2e/: __init__.py  test_db.py  util.py
tests/integration/: telegram_api.py  telegram_simulator.py  test_bot.py
tests/unit/: conftest.py  test_ban.py  test_bot.py  test_clean_muted_users.py  test_commands.py  test_config.py  test_db.py  test_db_backup.py  test_mute_unmute_warn.py  test_stas.py  test_stats.py  test_util.py  util.py
text/: help.md  rules.md  welcome.md
