[build-system]
requires = ["setuptools>=46.1.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

# Metadata of the project
[project]
name = "telegram-spotted-dmi-bot"
description = "Telegram-SpottedDMI-Bot is the platform that powers @Spotted_DMI_Bot, a Telegram bot that let students send an anonymous message to the channel community"
readme = "README.md"
requires-python = ">=3.10"
license.file = "LICENSE"
authors = [
    { name = "TendTo", email = "casablancaerneto@gmail.com" },
    { name = "drendog" },
    { name = "Helias" },
    { name = "Herbrant" },
    { name = "alepiaz" },
    { name = "TaToTanWeb" },
    { name = "FilippoMarletta" },
]
maintainers = [
    { name = "TendTo", email = "casablancaerneto@gmail.com" },
    { name = "drendog" },
    { name = "Helias" },
    { name = "alepiaz" },
    { name = "TaToTanWeb" },
]
keywords = ["python", "telegram", "bot", "spotted", "dmi", "unict"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Topic :: Communications :: Chat",
    "Operating System :: OS Independent",
]
dependencies = [
    "APScheduler==3.11.1",
    "cryptography==46.0.3",
    "pyotp==2.9.0",
    "python-telegram-bot==22.5",
    "pytz==2025.2",
    "PyYAML==6.0.3",
    "pyzipper==0.3.6",
    "qrcode[pil]==8.0",
]
dynamic = ['version']

# All the optional dependencies of the project
# Can be installed with `pip install telegram-spotted-dmi-bot[dependency]`
# e.g. `pip install telegram-spotted-dmi-bot[test]`
[project.optional-dependencies]
test = ["pytest", "pytest-asyncio", "pytest-cov", "pytest-mock"]
lint = ["pylint", "black", "isort"]

# URLs of the project
[project.urls]
Homepage = "https://unict-dmi.github.io/Telegram-SpottedDMI-Bot/"
Documentation = "https://unict-dmi.github.io/Telegram-SpottedDMI-Bot/api/modules"
Repository = "https://github.com/UNICT-DMI/Telegram-SpottedDMI-Bot"
Changelog = "https://github.com/UNICT-DMI/Telegram-SpottedDMI-Bot/blob/main/.github/CHANGELOG.md"

# Entry points of the package
[project.scripts]
spotted = "spotted.__main__:main"
run_sql = "spotted.scripts.run_sql:main"
f_crypto = "spotted.scripts.f_crypto:main"

# Setuptool configuration (build system)
[tool.setuptools]
include-package-data = true
package-dir = { "" = "src" }

# Automatic versioning based on git tags
[tool.setuptools_scm]
version_file = "src/spotted/_version.py"

# Pytest configuration (test runner)
[tool.pytest.ini_options]
minversion = "6.0"
addopts = [
    "--cov=spotted",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-fail-under=80",
    "--verbose",
]
testpaths = ["tests"]

# Black configuration (code formatter)
[tool.black]
target-version = ['py38', 'py39', 'py310', 'py311']
line-length = 120
include = '(src|tests)\/.*\.py'

# Isort configuration (import sorter)
[tool.isort]
profile = "black"
skip = ["_version.py"]

# Pylint configuration (code linter)
[tool.pylint.MASTER]
ignore = ['tests', '_version.py']
fail-under = '10.0'

[tool.pylint.'MESSAGES CONTROL']
disable = [
    "missing-module-docstring",
    "too-few-public-methods",
    "too-many-positional-arguments",
]

[tool.pylint.format]
max-line-length = 120

[tool.pylint.checker]
max-args = 7

[tool.pylint.similarities]
min-similarity-lines = 6
